--- a/src/components/Article/Article.module.scss
+++ b/src/components/Article/Article.module.scss
@@ -15,7 +15,7 @@
   }
 
   &__left {
-
+    max-width: 70%;
   }
 
   &__top {
@@ -25,10 +25,10 @@
   }
 
   &__title {
+    display: block;
     font-size: 20px;
     line-height: 28px;
     color: #1890FF;
-    text-overflow: ellipsis;
     margin-right: 10px;
   }
 
@@ -47,7 +47,15 @@
     justify-content: flex-start;
   }
 
+  &__tagsnowrap {
+    flex-wrap: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   &__tag {
+    overflow: hidden;
+    text-overflow: ellipsis;
     padding: 2px 5px;
     font-size: 12px;
     line-height: 15px;  
@@ -66,7 +74,6 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-
   }
 
   &__control {
@@ -117,4 +124,10 @@
 
 .articlefull {
   height: 100%;
+}
+
+.overflow {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
